test_fixtures/number/trailing_dot.lox
// ParserError: ExpectedSemicolon found Dot at l2c4
123.;
